test/extern/ferguson/mismatch-errors/mismatch-rv-vi.good
mismatch-rv-vi.chpl:4: error: extern proc does not match C declaration
