test/extern/ferguson/mismatch-errors/mismatch-rv-vi.future
error message: llvm extern proc mismatch
#18053
